# sys-wall

./: AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
specs/: 01-architecture.md  02-dashboard.md  03-monitor-module.md  04-network-module.md  05-qrcode-module.md  06-deployment.md  07-configuration.md  08-module-system.md  09-setup.md  10-testing.md
src/: config.rs  lib.rs  main.rs
src/modules/: dashboard.rs  mod.rs  network.rs  system_id.rs  system_info.rs  system_status.rs
